--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.2",
