--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.14.1",
@@ -18,6 +19,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.8.0",
+    "tsparticles": "^2.8.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
