--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.3.3",
     "hamburger-react": "^2.5.0",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-tsparticles": "^2.8.0",
     "tsparticles": "^2.8.0",
     "web-vitals": "^2.1.0"
